@@ -1,50 +1,73 @@
 package org.teamchallenge.bookshop.service.Impl;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.teamchallenge.bookshop.exception.NotFoundException;
+import org.teamchallenge.bookshop.config.BookMapper;
+import org.teamchallenge.bookshop.dto.BookDto;
+import org.teamchallenge.bookshop.exception.BookNotFoundException;
 import org.teamchallenge.bookshop.model.Book;
 import org.teamchallenge.bookshop.repository.BookRepository;
 import org.teamchallenge.bookshop.service.BookService;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class BookServiceImpl implements BookService {
     private final BookRepository bookRepository;
-    // TODO: Use DTO instead of model
+    private final BookMapper bookMapper;
+
     @Override
-    public void createBook(Book book) {
+    public void addBook(BookDto bookDto) {
+        Book book = bookMapper.dtoToEntity(bookDto);
         bookRepository.save(book);
     }
 
     @Override
-    public Optional<Book> getBookById(Long id) {
-        return Optional.of(bookRepository.findById(id)).orElseThrow(NotFoundException::new);
+    public BookDto getBookById(Long id) {
+        Book book = bookRepository.findById(id).orElseThrow(BookNotFoundException::new);
+        return bookMapper.entityToDTO(book);
     }
 
     @Override
-    public Book updateBook(Book book) {
-        bookRepository.findById(book.getId()).orElseThrow(NotFoundException::new);
-        return bookRepository.save(book);
+    public BookDto updateBook(BookDto bookDto) {
+        Book book = bookRepository.findById(bookDto.getId()).orElseThrow(BookNotFoundException::new);
+        Book updatedBook = Book.builder()
+                .id(bookDto.getId())
+                .title(book.getTitle())
+                .description(bookDto.getDescription())
+                .category(bookDto.getCategory())
+                .price(bookDto.getPrice())
+                .imageUrl(bookDto.getImageUrl())
+                .timeAdded(book.getTimeAdded())
+                .build();
+        bookRepository.save(updatedBook);
+        return bookMapper.entityToDTO(updatedBook);
     }
 
     @Override
     public void deleteBook(Long id) {
-        bookRepository.findById(id).orElseThrow(NotFoundException::new);
+        bookRepository.findById(id).orElseThrow(BookNotFoundException::new);
         bookRepository.deleteById(id);
     }
 
     @Override
-    public List<Book> getAllBooks(Pageable pageable) {;
-        return bookRepository.findAll(pageable).stream().toList();
+    public Page<BookDto> getAllBooks(Pageable pageable) {
+        Page<Book> bookPage = bookRepository.findAll(pageable);
+        List<BookDto> bookDtoList = bookPage.getContent().stream()
+                .map(bookMapper::entityToDTO)
+                .collect(Collectors.toList());
+        return new PageImpl<>(bookDtoList, pageable, bookPage.getTotalElements());
     }
 
-    @Override
-    public Optional<Book> findBooksByTitle(String title) {
-        return bookRepository.findByTitle(title);
-    }
+        @Override
+        public BookDto findBooksByTitle(String title) {
+            Book book = bookRepository.findByTitle(title).orElseThrow(BookNotFoundException::new);
+            return bookMapper.entityToDTO(book);
+        }
+
 }
